--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,25 @@ body {
 #root {
   height: 100%;
 }
+
+@keyframes zomg {
+  0%,
+  100% {
+    color: #7ccdea;
+  }
+  16% {
+    color: #0074d9;
+  }
+  32% {
+    color: #2ecc40;
+  }
+  48% {
+    color: #ffdc00;
+  }
+  64% {
+    color: #b10dc9;
+  }
+  80% {
+    color: #ff4136;
+  }
+}
